Needed to add body to style
bug fix

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
 		<style>
-			background: url("https://calovell.github.io/Chad_and_Lyndsay_Golden_Gate.png");
-			background-size: cover;
-			background-position: center;
+			body {
+				background: url("https://calovell.github.io/Chad_and_Lyndsay_Golden_Gate.png");
+				background-size: cover;
+				background-position: center;
+			}
 		</style>
 
 
