Update picture link
pic link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<style>
 			body {
-				background: url("https://calovell.github.io/Chad_and_Lyndsay_Golden_Gate.png");
+					background: url("https://github.com/calovell/calovell.github.io/blob/master/Chad_and_Lynds_Golden_Gate.png");
 				background-size: cover;
 				background-position: center;
 			}
