No image repeat
do not repeat the image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				background: url("https://raw.github.com/calovell/calovell.github.io/master/Chad_and_Lynds_Golden_Gate.png");
 				background-size: cover;
 				background-position: center;
+				background-repeat: no-repeat;
 			}
 		</style>
 
