Comment out Bootstrap css
change in css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Chad Lovell">
     <meta name="author" content="Chad Lovell">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <!--<link href="css/bootstrap.css" rel="stylesheet">-->
 
 		<style>
 			body {
