--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <meta name="description" content="Chad Lovell">
     <meta name="author" content="Chad Lovell">
     <!-- Bootstrap -->
-    <!--<link href="css/bootstrap.css" rel="stylesheet">-->
-
-		<style>
-			body {
-				background: url("https://raw.github.com/calovell/calovell.github.io/master/Chad_and_Lynds_Golden_Gate.png");
-				background-size: cover;
-				background-position: center;
-				background-repeat: no-repeat;
-			}
-		</style>
+    <link href="css/bootstrap.css" rel="stylesheet">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -28,10 +19,12 @@
     <![endif]-->
   </head>
   <body>
-	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.backstretch.min.js">
+    	$.backstretch("https://raw.github.com/calovell/calovell.github.io/master/Chad_and_Lynds_Golden_Gate.png");
+    </script>
   </body>
 </html>
