--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Chad Lovell</title>
 	<style>
 		body {
-			background: url("https://raw.github.com/calovell/calovell.github.io/master/Chad_and_Lynds_Golden_Gate.png");
+			background: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
 			background-size: cover;
 			background-position: center;
 			background-repeat: no-repeat;
