Fix Background image
fix image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Chad Lovell</title>
 	<style>
 		body {
-			background: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
+			background-image: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
 			background-size: cover;
-			background-position: center;
 			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-position: center;
 		}
 	</style>
   </head>
