--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <title>Chad Lovell</title>
 	<style>
 		body {
-			background-image: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
+			background: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-position: center;
 		}
+		h1 {
+			font-family: Anodyne;
+			font-size: 70px;
+			color: #FFFFFF;
+			padding: 17px 25px 0px 25px;
+			margin-top: 15px;
+			background-color: rgba(0,0,0,0.5);
+			float: left;
+			margin: 20px 0px 0px 0px;
+    	}
+    	@media (max-width: 500px) {
+      		h1 {
+        		font-size: 36px;
+        		padding: 5px;
+      		}
+	    }
 	</style>
   </head>
   <body>
