Add multiple browser support
multiple browser support

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
+  	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
     <title>Chad Lovell</title>
 	<style>
 		body {
