--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 			background-position: center;
 		}
 		h1 {
-			font-family: Anodyne;
-			font-size: 72px;
+			font-family: "Anodyne" sans-serif;
+			font-size: 4.5em;
 			color: #FFFFFF;
-			padding: 19px 24px 0px 24px;
+			padding: 0.25em 0.5em 0em 0.5em;
 			margin-top: 15px;
 			background-color: rgba(0,0,0,0.5);
 			float: left;
-			margin: 20px 0px 0px 0px;
+			margin: 0.25em 0em 0em 0em;
     	}
     	@media (max-width: 500px) {
       		h1 {
-        		font-size: 48px;
-        		padding: 13px 16px 0px 16px;
+        		font-size: 3em;
+        		padding: 0.25em 0.5em 0em 0.5em;
       		}
 	    }
 	</style>
