Social Icons and margins
new icons and reset margins

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Chad Lovell</title>
 	<style>
 		body {
-			background: url("http://calovell.github.io/Chad_and_Lynds_Golden_Gate.png");
+			background: url("http://calovell.github.io/pics/Chad_and_Lynds_Golden_Gate.png");
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-position: center;
 		}
 		h1 {
-			font-family: "Anodyne" sans-serif;
+			font-family: 'Anodyne' sans-serif;
 			font-size: 4.5em;
 			color: #FFFFFF;
 			padding: 0.25em 0.5em 0em 0.5em;
@@ -21,6 +21,16 @@
 			background-color: rgba(0,0,0,0.5);
 			float: left;
 			margin: 0.25em 0em 0em 0em;
+    	}
+    	div {
+    		margin: 0.75em 0em 0.75em 2.25em;
+    		display: inline;
+    		float: left;
+    		opacity: 0.5;
+    	}
+    	a {
+    		float: left;
+    		margin: 0.75em 0em 0.75em 0em;
     	}
     	@media (max-width: 500px) {
       		h1 {
@@ -32,6 +42,20 @@
   </head>
   <body>
   	<h1>Chad Lovell</h1>
+  	<div>
+  		<a href="http://twitter.com/chad_lovell">
+  			<img src="http://calovell.github.io/icons/Twitter.png">
+  		</a>
+  		<a href="http://linkedin.com/chad.lovell">
+  			<img src="http://calovell.github.io/icons/LinkedIn.png">
+  		</a>
+  		<a href="http://plus.google.com/lovell.chad">
+  			<img src="http://calovell.github.io/icons/Google-Plus.png">
+  		</a>
+  		<a href="mailto:lovell.chad@gmail.com">
+  			<img src="http://calovell.github.io/icons/E-Mail.png">
+  		</a>
+  	</div>
   	<script>
   	</script>
   </body>
