--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     	}
     	div {
     		margin: 0.75em 0em 0.75em 2.25em;
-    		display: inline;
+    		display: block;
     		float: left;
     		opacity: 0.5;
     	}
@@ -37,19 +37,22 @@
         		font-size: 3em;
         		padding: 0.25em 0.5em 0em 0.5em;
       		}
+      		div {
+      			height: 5em;
+      		}
 	    }
 	</style>
   </head>
   <body>
   	<h1>Chad Lovell</h1>
   	<div>
-  		<a href="http://twitter.com/chad_lovell">
+  		<a href="https://twitter.com/chad_lovell">
   			<img src="http://calovell.github.io/icons/Twitter.png">
   		</a>
-  		<a href="http://linkedin.com/chad.lovell">
+  		<a href="https://www.linkedin.com/in/chadlovell">
   			<img src="http://calovell.github.io/icons/LinkedIn.png">
   		</a>
-  		<a href="http://plus.google.com/lovell.chad">
+  		<a href="https://plus.google.com/08834173465292892841">
   			<img src="http://calovell.github.io/icons/Google-Plus.png">
   		</a>
   		<a href="mailto:lovell.chad@gmail.com">
