--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     		display: block;
     		float: left;
     		opacity: 0.5;
+    		clear: left;
+    		width: 7.82em;
     	}
     	a {
     		float: left;
@@ -37,8 +39,8 @@
         		font-size: 3em;
         		padding: 0.25em 0.5em 0em 0.5em;
       		}
-      		div {
-      			height: 5em;
+      		a {
+      			
       		}
 	    }
 	</style>
