Fonts, and ole. Links in new window
Font changes and link updates

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
     <title>Chad Lovell</title>
 	<style>
@@ -13,7 +14,8 @@
 			background-position: center;
 		}
 		h1 {
-			font-family: 'Anodyne' sans-serif;
+			<!--font-family: 'Anodyne' sans-serif;-->
+                        font-family: 'Sacramento' cursive;
 			font-size: 4.5em;
 			color: #FFFFFF;
 			padding: 0.25em 0.5em 0em 0.5em;
@@ -48,13 +50,13 @@
   <body>
   	<h1>Chad Lovell</h1>
   	<div>
-  		<a href="https://twitter.com/chad_lovell">
+  		<a href="https://twitter.com/chad_lovell" target="_blank">
   			<img src="http://calovell.github.io/icons/Twitter.png">
   		</a>
-  		<a href="https://www.linkedin.com/in/chadlovell">
+  		<a href="https://www.linkedin.com/in/chadlovell" target="_blank">
   			<img src="http://calovell.github.io/icons/LinkedIn.png">
   		</a>
-  		<a href="https://plus.google.com/08834173465292892841">
+  		<a href="https://plus.google.com/08834173465292892841" target="_blank">
   			<img src="http://calovell.github.io/icons/Google-Plus.png">
   		</a>
   		<a href="mailto:lovell.chad@gmail.com">
