--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			background-position: center;
 		}
 		h1 {
-			<!--font-family: 'Anodyne' sans-serif;-->
-                        font-family: 'Sacramento' cursive;
+			/*font-family: 'Anodyne' sans-serif;*/
+                        font-family: 'Sacramento' cursive !important;
 			font-size: 4.5em;
 			color: #FFFFFF;
 			padding: 0.25em 0.5em 0em 0.5em;
