--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
+    <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
     <title>Chad Lovell</title>
 	<style>
@@ -14,8 +14,7 @@
 			background-position: center;
 		}
 		h1 {
-			/*font-family: 'Anodyne' sans-serif;*/
-                        font-family: 'Sacramento' cursive !important;
+            font-family: 'Sacramento' cursive !important;
 			font-size: 4.5em;
 			color: #FFFFFF;
 			padding: 0.25em 0.5em 0em 0.5em;
@@ -41,8 +40,11 @@
         		font-size: 3em;
         		padding: 0.25em 0.5em 0em 0.5em;
       		}
+      		div {
+      			width: 5em;
+      		}
       		a {
-      			
+      			height: 5em;
       		}
 	    }
 	</style>
