--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
         		padding: 0.25em 0.5em 0em 0.5em;
       		}
       		div {
+      			margin: 0.5em 0em 0.5em 1.75em;
+      		}
+      		img {
+      			height: 5em;
       			width: 5em;
       		}
       		a {
-      			height: 5em;
+      			margin: 0.5em 0em 0.5em 0em;
       		}
 	    }
 	</style>
