--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
     <title>Chad Lovell</title>
+    
+	/*Google Analytics tracking code*/
+    <script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-45829200-1', 'chadlovell.com');
+		ga('send', 'pageview');
+
+	</script>
+
 	<style>
 		body {
 			background: url("http://calovell.github.io/pics/Chad_and_Lynds_Golden_Gate.png");
