--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
     <title>Chad Lovell</title>
     
-	/*Google Analytics tracking code*/
+	<!--Google Analytics tracking code-->
     <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
