Pinterest Meta Tag
Add Pinterest meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
+  	<meta name="p:domain_verify" content="3712b702a888fe27a7185b41e04737b6"/>
     <title>Chad Lovell</title>
     
 	<!--Google Analytics tracking code-->
