Page load improvements
Page load improvements

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/CSS'>
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
-  	<link href="http://calovell.github.io/icons/favicon.png" rel="icon">
+  	<link href="http://calovell.github.io/icons/favicon.png" rel="icon" type="image/png">
   	<meta name="p:domain_verify" content="3712b702a888fe27a7185b41e04737b6"/>
     <title>Chad Lovell</title>
     
@@ -84,7 +83,6 @@
   			<img src="http://calovell.github.io/icons/E-Mail.png">
   		</a>
   	</div>
-  	<script>
-  	</script>
+  	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
   </body>
 </html>
