--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
 			float: left;
 			margin: 0.25em 0em 0em 0em;
     	}
-    	div {
+    	div1 {
     		margin: 0.75em 0em 0.75em 2.25em;
     		display: block;
     		float: left;
+    		opacity: 0.5;
+    		clear: left;
+    		width: 7.82em;
+    	}
+    	div2 {
+    		margin: 0.75em 0em 0.75em 2.25em;
+    		display: block;
+    		float: right;
     		opacity: 0.5;
     		clear: left;
     		width: 7.82em;
@@ -69,20 +77,25 @@
   </head>
   <body>
   	<h1>Chad Lovell</h1>
-  	<div>
+  	<div1>
   		<a href="https://twitter.com/chad_lovell" target="_blank">
   			<img src="http://calovell.github.io/icons/Twitter.png">
   		</a>
   		<a href="https://www.linkedin.com/in/chadlovell" target="_blank">
   			<img src="http://calovell.github.io/icons/LinkedIn.png">
   		</a>
-  		<a href="https://plus.google.com/108834173465292892841" target="_blank">
+  		<a href="https://plus.google.com/+ChadLovell" target="_blank">
   			<img src="http://calovell.github.io/icons/Google-Plus.png">
   		</a>
   		<a href="mailto:lovell.chad@gmail.com">
   			<img src="http://calovell.github.io/icons/E-Mail.png">
   		</a>
-  	</div>
+  	</div1>
+  	<div2>
+  		<a href="https://medium.com/@Chad_Lovell" target="_blank">
+  			<img src="http://calovell.github.io/icons/Medium.png">
+  		</a>	
+  	</div2>
   	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
   </body>
 </html>
