--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     	}
     	div1 {
     		margin: 0.75em 0em 0.75em 2.25em;
-    		display: block;
+    		display: inline;
     		float: left;
     		opacity: 0.5;
     		clear: left;
@@ -47,7 +47,7 @@
     	}
     	div2 {
     		margin: 0.75em 0em 0.75em 2.25em;
-    		display: block;
+    		display: inline;
     		float: right;
     		opacity: 0.5;
     		clear: left;
