Icon alignment update
Clear right icon bar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     		display: inline;
     		float: right;
     		opacity: 0.5;
-    		clear: left;
+    		clear: right;
     		width: 7.82em;
     	}
     	a {
