--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         		font-size: 3em;
         		padding: 0.25em 0.5em 0em 0.5em;
       		}
-      		div {
+      		div1 {
       			margin: 0.5em 0em 0.5em 1.75em;
+      		}
+      		div2 {
+      			margin: 0.5em 1.75em 0.5em 0em;
       		}
       		img {
       			height: 5em;
