--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
       		}
       		div1 {
       			margin: 0.5em 0em 0.5em 1.75em;
+      			width: 5em;
       		}
       		div2 {
       			margin: 0.5em 1.75em 0.5em 0em;
+      			width: 5em;
       		}
       		img {
       			height: 5em;
