--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
   	<div2>
   		<a href="https://medium.com/@Chad_Lovell" target="_blank">
   			<img src="http://calovell.github.io/icons/Medium.png">
-  		</a>	
+  		</a>
+  		<a href="https://angel.co/chad-lovell" target="_blank">
+  			<img src="http://calovell.github.io/icons/Angel-List.png">
+  		</a>
   	</div2>
   	<script src="http://calovell.github.io/jquery-1.10.2.min.js"></script>
   </body>
