--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   	<link href="http://calovell.github.io/normalize.css" rel="stylesheet">
   	<link href="http://calovell.github.io/icons/favicon.png" rel="icon" type="image/png">
   	<meta name="p:domain_verify" content="3712b702a888fe27a7185b41e04737b6"/>
-    <title>Chad Lovell</title>
+    <title>Chad Lovell | Entrepreneur, Strategy & Innovation Executive</title>
+    <meta name="description" content="Chad Lovell is an entrepreneur and a strategy and innovation executive with a passion for life-long learning, technology and great products. Chad has successfully held multiple roles in strategy, finance, operations, sales and marketing at startups and at Global 100 manufacturing companies. He holds a BS in electrical engineering from TCU and an MBA in entrepreneurship and innovation from the MIT Sloan School of Management">
     
 	<!--Google Analytics tracking code-->
     <script>
